--- a/src/index.html
+++ b/src/index.html
@@ -6,41 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<div class="content">
-    <!-- <div class="column-container">
-        <h1 class="title__column-container">TODO</h1>
-        <div class="element__column-container">
-            <p class="text__element">
-                <span class="delete__input">x</span>
-        </div>
-        <button class="btn_add__card">+ Add another card</button>
-    </div>
-    <div class="column-container">
-        <h1 class="title__column-container">In progress</h1>
-        <div class="element__column-container">
-            <p class="text__element">
-                <span class="delete__input">x</span>
-        </div>
-        <button class="btn_add__card">+ Add another card`</button>
-    </div>
-    <div class="column-container">
-        <h1 class="title__column-container">DONE</h1>
-        <div class="element__column-container">
-            <p class="text__element">
-                <span class="delete__input">x</span>
-        </div>
-        <button class="btn_add__card">+ Add another card`</button>
-    </div>
-</div>
-
-<div class="new-card">
-    <input class="input__new-card">
-    <button class="add__new-card">Add</button>
-    <button class="cancel__new-card">X</button> -->
-</div>
 
 <body>
+    <div class="app_container">
+        <div class="column todo">
+            <h1 class="title">TODO</h1>
 
+            <a class="add_card" href="#">+ Add another card</a>
+        </div>
+        <div class="column in_progress">
+            <h1 class="title">IN PROGRESS</h1>
+
+            <a class="add_card" href="#">+ Add another card</a>
+        </div>
+        <div class="column done">
+            <h1 class="title">DONE</h1>
+
+            <a class="add_card" href="#">+ Add another card</a>
+        </div>
+    </div>
 </body>
 
 </html>
